@@ -7,8 +7,8 @@
 - [Description](#description)
 - [Getting Started](#getting-started)
 - [Troubleshooting](#troubleshooting)
-- [Usage Scenarios](#usage-scenarios)
 - [Usage Instructions](#usage_instructions)
+- [Usage Scenarios](#usage-scenarios)
 - [Contributors](#contributors)
 - [License](#license)
 
@@ -46,22 +46,36 @@ TablatureConverter requires the the following to run:
 - Download [JavaFX SDK](https://gluonhq.com/products/javafx/)
 
 
-### How to Access for Eclipse
+### How to Run Program
 
 1. Download ZIP in repository and unzip the file or click on the clipboard icon in order to clone URI on eclipse
 
 ![Code](https://res.cloudinary.com/practicaldev/image/fetch/s--L5zkGG8u--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/95r8bqqsnt0losag50b1.png)
 
-2. i) Open Eclipse -> Import -> Exisiting project into workspace -> Select the unzipped file "TablatureConverter"
-                                                              OR
+2. i) Open Eclipse -> Import -> Exisiting project into workspace -> Select the unzipped file "TablatureConverter 
+ 
+        OR
+
    ii.) Open Eclipse -> Import -> Git -> Project from git -> Clone URI -> Paste the URI -> Finish
    
-3. Add text below to VM arguments in run configurations
-```
---module-path "path_here" --add-modules javafx.controls,javafx.fxml
-```
-4. Go to src/GUI, open application package, right click Main.java -> Run As -> Java Application
-5. Program is now running! The outputted MusicXML file is in the src/sample package.
+3.)  Click on window -> Show view -> Other -> Gradle -> Gradle Tasks -> 
+
+4.) Click on drop down icon on TablatureConverter from Gradle Tasks then click on application -> run
+   
+5.) Program is now running! The outputted MusicXML file is in the src/sample package.
+
+
+
+## usage_instructions
+1.) Choose option to upload file or copy from clipboard
+2.) After choosing to upload file, the contents of the file would display on the clipboard
+3.) Edit file if need be from the clipboard
+4.) Click on convert after choosing file; NOTE: An error message would be displayed if file is not chosen
+5.) A new screen would come up after clicking on the convert button
+6.) Click on the "back" button to go back to the home page
+7.) Click on the "open MusicXML" button to show converted musicXML file
+8.) View or download MusicXML file depending on users preference.
+
 
 
 ## Usage-Scenario
@@ -100,6 +114,10 @@ The program opens the converted MusicXML in the browser
 John downloads the MusicXML file
 
 
+
+
+
+
 ## Contributors
 
 - https://github.com/jamesmqle
@@ -116,6 +134,8 @@ Tuan Dau - tdau@my.yorku.ca
 James Le - jamesmql@my.yorku.ca
 
 Temi Odunfa- odunifa.temi@gmail.com
+
+Amin Mohammadi- amin45mh@gmail.com
 
 ---
 
